# gudhi-devel

./: CMakeLists.txt  azure-pipelines.yml  pyproject.toml
src/: CMakeLists.txt
src/Cech_complex/utilities/: CMakeLists.txt  delaunay_cech_persistence.cpp
src/Coxeter_triangulation/doc/: intro_coxeter_triangulation.h
src/Coxeter_triangulation/example/: cell_complex_from_basic_circle_manifold.cpp
src/Coxeter_triangulation/include/gudhi/Coxeter_triangulation/Cell_complex/: Cell_complex.h
src/Coxeter_triangulation/include/gudhi/IO/: build_mesh_from_cell_complex.h  output_debug_traces_to_html.h
src/Hasse_diagram/concept/: Cell_type.h  HasseDiagramOptions.h
src/Hasse_diagram/doc/: Intro_hasse_diagam.h
src/Hasse_diagram/example/: CMakeLists.txt  Hasse_diagram_basic_example.cpp  Hasse_diagram_example.cpp  Hasse_diagram_from_cubical_complex.cpp  Hasse_diagram_from_simplex_tree.cpp  Hasse_diagram_torus_example.cpp  Insertion_and_removal_operations_on_Hasse_diagrams.cpp
src/Hasse_diagram/include/gudhi/: Hasse_diagram.h  Hasse_diagram_cell.h  Hasse_diagram_persistence.h
src/Hasse_diagram/test/: CMakeLists.txt  Hasse_diagram_test.cpp
src/Hasse_diagram/utilities/: CMakeLists.txt  Hasse_diagram_from_file.cpp
src/Persistence_matrix/benchmark/: CMakeLists.txt  activities.off  persistence_matrix_benchmark.cpp  random_filtrations.h
src/Persistence_matrix/include/gudhi/: Persistence_matrix.h
src/Rips_complex/example/: CMakeLists.txt  example_rips_complex_from_off_file_serialization.cpp
src/Rips_complex/include/gudhi/: Rips_complex.h
src/Subsampling/include/gudhi/: choose_n_farthest_points.h
src/Subsampling/test/: test_choose_n_farthest_points.cpp
src/cmake/modules/: GUDHI_third_party_libraries.cmake
src/common/doc/: examples.h  file_formats.h  main_page.md
src/python/: CMakeLists.txt  pyproject.toml.in
src/python/doc/: README.md  edge_collapse_sum.inc  edge_collapse_user.rst  index.rst
src/python/gudhi/: CMakeLists.txt  edge_collapse.cc
src/python/include/: Edge_collapse_interface.h
src/python/test/: test_sklearn_rips_persistence.py
