[build-system]
requires = ["numpy>=1.15.0", "scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
cmake.args = [
    "-DWITH_GUDHI_TEST=OFF",
    "-DWITH_GUDHI_UTILITIES=OFF",
    "-DWITH_GUDHI_GUDHUI=OFF",
]
cmake.build-type = "Release"
build.tool-args = ["-j12"]
wheel.packages = ["src/python/gudhi"]

[project]
name = "gudhi"
version = "3.12.0a1"
description = """
The Gudhi library is an open source library for Computational Topology \
and Topological Data Analysis (TDA)."""
readme = "src/python/doc/README.md"
requires-python = ">=3.8"
authors = [{ name = "GUDHI Editorial Board <https://gudhi.inria.fr/contact/>" }]
classifiers = ["License :: MIT"]
# Optional: runtime dependency specification
# dependencies = [ "cryptography >=41.0" ]

[project.urls]
Homepage = "https://gudhi.inria.fr/python/latest/"
